[package]
name = "pna-rust-exercises"
description = "Exercises in PNA Rust."
version = "0.1.0"
edition = "2021"
authors = ["Joe Ma <rikkaneko23@gmail.com>"]
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "^2.0"
predicates = "^2.1"

[dependencies]
clap = { version = "2.34.0", features = ["yaml"] }
